--- a/client/src/index.css
+++ b/client/src/index.css
@@ -102,7 +102,7 @@
 }
 
 .custom-shape-divider-top-1713521912 .shape-fill {
-    fill: #FFFFFF;
+    fill: #F8FAFC;
 }
 
 .custom-shape-divider-top-1713522799 {
